2002-03-23  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (gconf_main): change exit timeout to 2 minutes

2002-03-22  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (gconf_set_exception): change "returning
	exception" message to DEBUG priority

2002-03-20  Havoc Pennington  <hp@pobox.com>

	* tests/testpersistence.c: remove the -G_MAXFLOAT test, since
	it didn't work and probably shouldn't

	* gconf/gconf-internals.c (gconf_double_to_string): use
	g_ascii_dtostr()
	(gconf_string_to_double): use g_ascii_strtod()

2002-03-21  Havoc Pennington  <hp@redhat.com>

	* configure.in: fuck, Martin apparently deleted -Wall last March.
	
	* gconf/gconftool.c (main): don't pass unused arg to do_get_default_source
	
	* backends/xml-test.c: include all headers we use

	* backends/xml-backend.c (remove_dir): fix unused variable

	* backends/xml-dir.c (dir_rescan_subdirs): return a value in all
	cases

	* gconf/gconf-sanity-check.c (check_gconf): remove unused variables

	* gconf/gconfd.c: include sys/wait.h

	* gconf/gconf-client.c: remove unused function

2002-03-21  Havoc Pennington  <hp@redhat.com>

	* backends/xml-entry.c (schema_node_extract_value): be sure 
	we use only NODE elements as a fallback, and that we 
	always use a NODE if possible
	(schema_node_extract_value): fix bug that would fail to fall back
	to a less-well-matched locale value if a better matched locale had
	no value. Should fix Galeon. And the world rejoiced! Assuming 
	it actually fixes it. ;-)

2002-03-21  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-schema.c: move schema accessors to be functions not
	macros.

2002-03-20  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-internals.c
	(gconf_value_list_to_primitive_list_destructive): don't call
	gconf_value_get_int on a bool. WTF.

	* gconf/gconfd.c (main): enable the signal handler for USR1

	* backends/xml-dir.c (dir_load_doc): do our own file reading, only
	use libxml to parse, so we can return an error on I/O problems