@@ -1,3 +1,10 @@
+2002-03-24  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-internals.c (gconf_activate_server): save a bit more
+	data about the errors that occurred for the error message, 
+	and shorten the message in favor of a link to the new 
+	gconf web page.
+
 2002-03-23  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconfd.c (gconf_main): change exit timeout to 2 minutes
